force-app/main/default/objects/ESS_Master_Employee__c.object
<CustomObject>
    <fields>
        <fullName>Address_EN_Current_House_No__c</fullName>
        <label>Address EN Current House No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_Moo_Village_Soi_Road__c</fullName>
        <label>Address EN Current Moo Village Soi Road</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_Postal_Code__c</fullName>
        <label>Address EN Current Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_Province__c</fullName>
        <label>Address EN Current Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_SubDistrict_District__c</fullName>
        <label>Address EN Current SubDistrict District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_Telephone_No__c</fullName>
        <label>Address EN Current Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_House_No__c</fullName>
        <label>Address EN House No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Moo_Village_Soi_Road__c</fullName>
        <label>Address EN Moo Village Soi Road</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Postal_Code__c</fullName>
        <label>Address EN Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Province__c</fullName>
        <label>Address EN Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_SubDistrict_District__c</fullName>
        <label>Address EN SubDistrict District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Telephone_No__c</fullName>
        <label>Address EN Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_House_No__c</fullName>
        <label>Address TH Current House No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_Moo_Village_Soi_Road__c</fullName>
        <label>Address TH Current Moo Village Soi Road</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_Postal_Code__c</fullName>
        <label>Address TH Current Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_Province__c</fullName>
        <label>Address TH Current Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_SubDistrict_District__c</fullName>
        <label>Address TH Current SubDistrict District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_Telephone_No__c</fullName>
        <label>Address TH Current Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_House_No__c</fullName>
        <label>Address TH House No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Moo_Village_Soi_Road__c</fullName>
        <label>Address TH Moo Village Soi Road</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Postal_Code__c</fullName>
        <label>Address TH Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Province__c</fullName>
        <label>Address TH Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_SubDistrict_District__c</fullName>
        <label>Address TH SubDistrict District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Telephone_No__c</fullName>
        <label>Address TH Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Room_Next_Year__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Available Room Next Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Room__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Available Room</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CEP__c</fullName>
        <label>CEP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <label>Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_JSON__c</fullName>
        <label>Child JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Updated to SAP / Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Person_JSON__c</fullName>
        <label>Contact Person JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>OUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Death_Child_JSON__c</fullName>
        <label>Death Child JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Death_Father_Detail__c</fullName>
        <label>Death Father Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_Doc_Issue_Date__c</fullName>
        <label>Death Father Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Death_Father_Doc_Issue_Location__c</fullName>
        <label>Death Father Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_Doc_Issue_Province__c</fullName>
        <label>Death Father Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_Doc_No__c</fullName>
        <label>Death Father Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_FN__c</fullName>
        <label>Death Father FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_LN__c</fullName>
        <label>Death Father LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_Title__c</fullName>
        <label>Death Father Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Death_Marriage_Doc_Issue_Date__c</fullName>
        <label>Death Marriage Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_Doc_Issue_Location__c</fullName>
        <label>Death Marriage Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_Doc_Issue_Province__c</fullName>
        <label>Death Marriage Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_Doc_No__c</fullName>
        <label>Death Marriage Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_FN__c</fullName>
        <label>Death Marriage FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_LN__c</fullName>
        <label>Death Marriage LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_Title__c</fullName>
        <label>Death Marriage Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Death_Mother_Detail__c</fullName>
        <label>Death Mother Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_Doc_Issue_Date__c</fullName>
        <label>Death Mother Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Death_Mother_Doc_Issue_Location__c</fullName>
        <label>Death Mother Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_Doc_Issue_Province__c</fullName>
        <label>Death Mother Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_Doc_No__c</fullName>
        <label>Death Mother Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_FN__c</fullName>
        <label>Death Mother FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_LN__c</fullName>
        <label>Death Mother LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_Title__c</fullName>
        <label>Death Mother Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_No__c</fullName>
        <formula>ESS_Application__r.Document_No__c</formula>
        <label>Document No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESS_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ESS Application</label>
        <referenceTo>ESS_Application__c</referenceTo>
        <relationshipLabel>ESS Master Employee</relationshipLabel>
        <relationshipName>ESS_Master_Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education_JSON__c</fullName>
        <label>Education JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_DOB__c</fullName>
        <label>Employee DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Date_Joined__c</fullName>
        <label>Employee Date Joined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Retirement_Date__c</fullName>
        <label>Employee Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsExistPISUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExistPISUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExistSFUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExistSFUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsValidateComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsValidateComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Marriage_As_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Marriage As Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_ContactPerson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update ContactPerson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Death__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Citizen_Expire_Date__c</fullName>
        <label>License Citizen Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Citizen_Id__c</fullName>
        <label>License Citizen Id</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Citizen_Issue_Date__c</fullName>
        <label>License Citizen Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Citizen_Issue_Province__c</fullName>
        <label>License Citizen Issue Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Professional_Doc_Expire_Date__c</fullName>
        <label>License Professional Doc Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Professional_Doc_Issue_Date__c</fullName>
        <label>License Professional Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Professional_Doc_Level__c</fullName>
        <label>License Professional Doc Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Professional_Doc_No__c</fullName>
        <label>License Professional Doc No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Professional_Engineer__c</fullName>
        <label>License Professional Engineer</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Child_Count__c</fullName>
        <label>Name Child Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Child_JSON__c</fullName>
        <label>Name Child JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_Emp_Change_Doc_Issue_Date__c</fullName>
        <label>Name Emp Change Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_Emp_Change_Doc_Issue_Location__c</fullName>
        <label>Name Emp Change Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_Change_Doc_Issue_Province__c</fullName>
        <label>Name Emp Change Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_Change_Doc_No__c</fullName>
        <label>Name Emp Change Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_EN_FN__c</fullName>
        <label>Name Emp EN FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_EN_LN__c</fullName>
        <label>Name Emp EN LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_EN_Title__c</fullName>
        <label>Name Emp EN Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Emp_Status_EN_FN__c</fullName>
        <label>Name Emp Status EN FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_Status_EN_LN__c</fullName>
        <label>Name Emp Status EN LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_Status_EN_Title__c</fullName>
        <label>Name Emp Status EN Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Emp_Status_TH_Title_FN_LN__c</fullName>
        <label>Name Emp Status TH Title FN LN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_TH_Title_FN_LN__c</fullName>
        <label>Name Emp TH Title FN LN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_Change_Doc_Issue_Date__c</fullName>
        <label>Name Father Change Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_Father_Change_Doc_Issue_Location__c</fullName>
        <label>Name Father Change Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_Change_Doc_Issue_Province__c</fullName>
        <label>Name Father Change Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_Change_Doc_No__c</fullName>
        <label>Name Father Change Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_EN_FN__c</fullName>
        <label>Name Father EN FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_EN_LN__c</fullName>
        <label>Name Father EN LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_EN_Title__c</fullName>
        <label>Name Father EN Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Father_TH_FN__c</fullName>
        <label>Name Father TH FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_TH_LN__c</fullName>
        <label>Name Father TH LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_TH_Title__c</fullName>
        <label>Name Father TH Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Marriage_Change_Doc_Issue_Date__c</fullName>
        <label>Name Marriage Change Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_Change_Doc_Issue_Location__c</fullName>
        <label>Name Marriage Change Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_Change_Doc_Issue_Province__c</fullName>
        <label>Name Marriage Change Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_Change_Doc_No__c</fullName>
        <label>Name Marriage Change Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_EN_FN__c</fullName>
        <label>Name Marriage EN FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_EN_LN__c</fullName>
        <label>Name Marriage EN LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_EN_Title__c</fullName>
        <label>Name Marriage EN Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Marriage_TH_FN__c</fullName>
        <label>Name Marriage TH FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_TH_LN__c</fullName>
        <label>Name Marriage TH LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_TH_Title__c</fullName>
        <label>Name Marriage TH Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Mother_Change_Doc_Issue_Date__c</fullName>
        <label>Name Mother Change Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_Mother_Change_Doc_Issue_Location__c</fullName>
        <label>Name Mother Change Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_Change_Doc_Issue_Province__c</fullName>
        <label>Name Mother Change Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_Change_Doc_No__c</fullName>
        <label>Name Mother Change Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_EN_FN__c</fullName>
        <label>Name Mother EN FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_EN_LN__c</fullName>
        <label>Name Mother EN LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_EN_Title__c</fullName>
        <label>Name Mother EN Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Mother_TH_FN__c</fullName>
        <label>Name Mother TH FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_TH_LN__c</fullName>
        <label>Name Mother TH LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_TH_Title__c</fullName>
        <label>Name Mother TH Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_Probation__c</fullName>
        <formula>IF((TODAY() - (Employee_Date_Joined__c - 1) &gt;= 151), true , false)</formula>
        <label>Need Probation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probation_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Probation Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probation_Section_Head_Id__c</fullName>
        <label>Probation Section Head Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probation_Section_Head_Name__c</fullName>
        <label>Probation Section Head Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probation_Section_Head_Position__c</fullName>
        <label>Probation Section Head Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probation_Section_Head_Skip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Probation Section Head Skip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probation_Section_Head_TH__c</fullName>
        <label>Probation Section Head TH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probation_VP_Id__c</fullName>
        <label>Probation VP Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probation_VP_Name__c</fullName>
        <label>Probation VP Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probation_VP_Position__c</fullName>
        <label>Probation VP Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probation_VP_TH__c</fullName>
        <label>Probation VP TH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probationary_Date__c</fullName>
        <formula>Employee_Date_Joined__c + 151</formula>
        <label>Probationary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retirement_Section_Head_Id__c</fullName>
        <label>Retirement Section Head Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_Section_Head_Name__c</fullName>
        <label>Retirement Section Head Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>